remove payment data from creation of orders