@@ -2,10 +2,12 @@ package br.com.fiap.pedido.api.adapter;
 
 import br.com.fiap.pedido.api.dto.request.PedidoRequest;
 import br.com.fiap.pedido.api.dto.response.PedidoResponse;
-import br.com.fiap.pedido.core.entity.*;
+import br.com.fiap.pedido.core.entity.Pedido;
+import br.com.fiap.pedido.core.entity.Produto;
+import br.com.fiap.pedido.core.entity.ProdutoSelecionado;
+import br.com.fiap.pedido.core.entity.Status;
 import br.com.fiap.pedido.core.enumerator.StatusEnum;
 import br.com.fiap.pedido.gateway.dataprovider.pagamento.CriarPagamentoDto;
-import br.com.fiap.pedido.gateway.dataprovider.pagamento.PagamentoDtoResponse;
 import br.com.fiap.pedido.gateway.repository.pedido.PedidoEntity;
 
 import java.math.BigDecimal;
@@ -15,27 +17,20 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class PedidoAdapter {
 
     public static Pedido toPedido(PedidoEntity pedidoEntity) {
         final var status = new Status(StatusEnum.from(pedidoEntity.getStatus().getId()));
-        final var produtos =  pedidoEntity.getProdutos().stream().map(p ->
+        final var produtos = pedidoEntity.getProdutos().stream().map(p ->
                 new ProdutoSelecionado(p.getProdutoId(), p.getQuantidade())
-        ).collect(Collectors.toList());
+        ).toList();
         String cliente = "";
         if(pedidoEntity.getCliente() != null)
             cliente = pedidoEntity.getCliente();
         return new Pedido(pedidoEntity.getId(), produtos,pedidoEntity.getValor(), cliente, status);
     }
 
-    public static PedidoResponse toResponse(Pedido pedido, PagamentoDtoResponse pagamento) {
-        final var response = new PedidoResponse(pedido.getId(), formatarParaReal(pedido.getValor()), pedido.getStatus().getTipo());
-        response.setQrData(pagamento.qrData());
-        response.setPagamentoId(pagamento.id());
-        return response;
-    }
     public static PedidoResponse toResponse(Pedido pedido) {
         return  new PedidoResponse(pedido.getId(), formatarParaReal(pedido.getValor()), pedido.getStatus().getTipo());
     }
@@ -48,11 +43,14 @@ public class PedidoAdapter {
         request.produtos().forEach(p ->
                 produtoQuantidade.put(p.produtoId(), p.quantidade())
         );
-        return produtos.stream().map(p -> new ProdutoSelecionado(p.getId(), produtoQuantidade.get(p.getId()))).collect(Collectors.toList());
+        return produtos.stream().map(p -> new ProdutoSelecionado(p.getId(), produtoQuantidade.get(p.getId()))).toList();
     }
 
     private static String formatarParaReal(BigDecimal valor){
-        return "R$" + new DecimalFormat("#,###,##0.00", new DecimalFormatSymbols(new Locale("pt", "BR"))).format(valor);
+        return "R$" + new DecimalFormat(
+                "#,###,##0.00",
+                new DecimalFormatSymbols(new Locale("pt", "BR")))
+                .format(valor);
     }
 
     public static PedidoEntity toUpdate(Pedido pedido) {
@@ -68,7 +66,7 @@ public class PedidoAdapter {
             var p = produtosList.stream()
                     .filter(produto -> produtoSelecionado.getProdutoId().equals(produto.getId())).findFirst().get();
             return new CriarPagamentoDto.ProdutoDto(p.getNome(), p.getDescricao(), p.getValor(), p.getImagemUrl());
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 }
